--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "tsw": "copy .env.dev .env && tsc -p tsconfig.json --watch",
     "tsgw": "tsc -p _html-generator/tsconfig-g.json --watch",
     "g": "node ./_html-generator/generator.js",
-    "w": "node ./watch.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "w": "node ./watch.js"
   },
   "author": "Michał Anioł",
   "license": "ISC",
@@ -16,20 +15,24 @@
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.8",
     "@types/ws": "^8.5.10",
-    "cors": "^2.8.5",
-    "http": "^0.0.1-security",
-    "tsc-watch": "^6.2.0",
-    "tough-cookie": "4.1.4",
     "browser-sync": "^3.0.2",
     "cheerio": "^1.0.0",
     "chokidar": "^4.0.3",
+    "cors": "^2.8.5",
     "esbuild": "^0.25.1",
     "express": "^4.19.2",
     "html-minifier": "^4.0.0",
+    "http": "^0.0.1-security",
     "minify": "^11.0.1",
+    "tough-cookie": "4.1.4",
+    "ts-jest": "^29.3.3",
+    "tsc-watch": "^6.2.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5",
+    "undici-types": "^7.9.0",
     "ws": "^8.18.1"
   }
 }
